--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -224,6 +224,10 @@
     "@menuitems_user_feedback": {
         "description": "the menu entry for the user feedback"
     },
+    "menuitems_legals": "Legal",
+    "@menuitems_legals": {
+        "description": "the menu entry for legal documents"
+    },
     "landingpage_overview_error_view_title": "An error occurred while retrieving the data.",
     "@landingpage_overview_error_view_title": {
         "description": "Title for the error view that appears if an error occurred while retrieving the data."
@@ -2676,5 +2680,41 @@
     "dashboard_recommendations_all_landingpages": "All",
     "@dashboard_recommendations_all_landingpages": {
         "description": "Dropdown option for all landing pages"
+    },
+    "admin_legals_title": "Legal",
+    "@admin_legals_title": {
+        "description": "Title of the Admin Legals page"
+    },
+    "admin_legals_avv_label": "Data Processing Agreement",
+    "@admin_legals_avv_label": {
+        "description": "Label for AVV field"
+    },
+    "admin_legals_avv_placeholder": "Enter DPA...",
+    "@admin_legals_avv_placeholder": {
+        "description": "Placeholder for AVV text field"
+    },
+    "admin_legals_privacy_policy_label": "Privacy Policy",
+    "@admin_legals_privacy_policy_label": {
+        "description": "Label for Privacy Policy field"
+    },
+    "admin_legals_privacy_policy_placeholder": "Enter Privacy Policy...",
+    "@admin_legals_privacy_policy_placeholder": {
+        "description": "Placeholder for Privacy Policy text field"
+    },
+    "admin_legals_terms_label": "Terms and Conditions",
+    "@admin_legals_terms_label": {
+        "description": "Label for Terms field"
+    },
+    "admin_legals_terms_placeholder": "Enter Terms and Conditions...",
+    "@admin_legals_terms_placeholder": {
+        "description": "Placeholder for Terms text field"
+    },
+    "admin_legals_save_button": "Save",
+    "@admin_legals_save_button": {
+        "description": "Save button text"
+    },
+    "admin_legals_save_success": "Legal data successfully saved!",
+    "@admin_legals_save_success": {
+        "description": "Success message after saving"
     }
 }
