--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -2905,6 +2905,14 @@
     "@admin_legals_terms_placeholder": {
         "description": "Placeholder für AGB Textfeld"
     },
+    "admin_legals_imprint_label": "Impressum",
+    "@admin_legals_imprint_label": {
+        "description": "Label für Impressum Feld"
+    },
+    "admin_legals_imprint_placeholder": "Impressum eingeben...",
+    "@admin_legals_imprint_placeholder": {
+        "description": "Placeholder für Impressum Textfeld"
+    },
     "admin_legals_save_button": "Speichern",
     "@admin_legals_save_button": {
         "description": "Speichern Button Text"
