--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -2921,6 +2921,18 @@
     "@admin_legals_save_success": {
         "description": "Erfolgsmeldung nach dem Speichern"
     },
+    "footer_privacy_policy": "Datenschutzerklärung",
+    "@footer_privacy_policy": {
+        "description": "Link zu Datenschutzerklärung im Footer"
+    },
+    "footer_imprint": "Impressum",
+    "@footer_imprint": {
+        "description": "Link zu Impressum im Footer"
+    },
+    "footer_terms_and_conditions": "AGBs",
+    "@footer_terms_and_conditions": {
+        "description": "Link zu AGBs im Footer"
+    },
     "dashboard_quicklink_recommendation_text": "Heute schon eine Empfehlung ausgesprochen?",
     "@dashboard_quicklink_recommendation_text": {
         "description": "Text für den ersten Dashboard Quicklink - Empfehlung aussprechen"
