--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2921,6 +2921,18 @@
     "@admin_legals_save_success": {
         "description": "Success message after saving"
     },
+    "footer_privacy_policy": "Privacy Policy",
+    "@footer_privacy_policy": {
+        "description": "Link to Privacy Policy in footer"
+    },
+    "footer_imprint": "Imprint",
+    "@footer_imprint": {
+        "description": "Link to Imprint in footer"
+    },
+    "footer_terms_and_conditions": "Terms & Conditions",
+    "@footer_terms_and_conditions": {
+        "description": "Link to Terms & Conditions in footer"
+    },
     "dashboard_quicklink_recommendation_text": "Have you made a recommendation today?",
     "@dashboard_quicklink_recommendation_text": {
         "description": "Text for the first dashboard quicklink - make recommendation"
