--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2905,6 +2905,14 @@
     "@admin_legals_terms_placeholder": {
         "description": "Placeholder for Terms text field"
     },
+    "admin_legals_imprint_label": "Imprint",
+    "@admin_legals_imprint_label": {
+        "description": "Label for Imprint field"
+    },
+    "admin_legals_imprint_placeholder": "Enter Imprint...",
+    "@admin_legals_imprint_placeholder": {
+        "description": "Placeholder for Imprint text field"
+    },
     "admin_legals_save_button": "Save",
     "@admin_legals_save_button": {
         "description": "Save button text"
@@ -2912,6 +2920,18 @@
     "admin_legals_save_success": "Legal data successfully saved!",
     "@admin_legals_save_success": {
         "description": "Success message after saving"
+    },
+    "footer_privacy_policy": "Privacy Policy",
+    "@footer_privacy_policy": {
+        "description": "Link to Privacy Policy in footer"
+    },
+    "footer_imprint": "Imprint",
+    "@footer_imprint": {
+        "description": "Link to Imprint in footer"
+    },
+    "footer_terms_and_conditions": "Terms & Conditions",
+    "@footer_terms_and_conditions": {
+        "description": "Link to Terms & Conditions in footer"
     },
     "dashboard_quicklink_recommendation_text": "Have you made a recommendation today?",
     "@dashboard_quicklink_recommendation_text": {
