--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2944,5 +2944,21 @@
     "dashboard_quicklink_manager_button": "Go to Recommendation Manager",
     "@dashboard_quicklink_manager_button": {
         "description": "Button text for the second dashboard quicklink - recommendation manager"
+    },
+    "dashboard_recommendations_info_tooltip": "Here you can see how many recommendations your promoters have sent in the selected time period.",
+    "@dashboard_recommendations_info_tooltip": {
+        "description": "Tooltip text for the info button in dashboard recommendations"
+    },
+    "dashboard_promoters_info_tooltip": "Here you can see how many promoters you have gained in the selected time period.",
+    "@dashboard_promoters_info_tooltip": {
+        "description": "Tooltip text for the info button in dashboard promoters"
+    },
+    "dashboard_promoter_ranking_info_tooltip": "This analysis shows you which promoters have generated the most successfully completed recommendations in the selected time period.",
+    "@dashboard_promoter_ranking_info_tooltip": {
+        "description": "Tooltip text for the info button in dashboard promoter ranking"
+    },
+    "dashboard_landingpage_ranking_info_tooltip": "This analysis shows you which of your landing pages have generated the most completed recommendations in the selected time period.",
+    "@dashboard_landingpage_ranking_info_tooltip": {
+        "description": "Tooltip text for the info button in dashboard landing page ranking"
     }
 }
